blue-green-switch-project/blue-service.yaml
# Create a service to expose your application
#
# blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: blue
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
