blue-green-switch-project/green-service.yaml
# green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: green
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
