blue-green-switch-project/readme.yaml
# To switch traffic from blue to green:
# Update the ingress.yaml as below to point to the green service.

# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: green
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 80


# first steps: setup vm, do kubectl get nodes, then kubectl create namespace green and for blue, then u create deployments for blue and green versions of app, then apply using kubectl apply -f blue-deployment.yaml and for green similarly, then configure service and ingress, then at the end, update ingress file to switch traffic between blue and green, then apply ingress - kubectl apply -f ingress.yaml so when u do this traffic will be switched to green ans vice versa
